fix z-index for embed (show embed modal in front of video js)

--- a/frontend/src/static/js/components/media-page/MediaPage.scss
+++ b/frontend/src/static/js/components/media-page/MediaPage.scss
@@ -857,6 +857,7 @@
     display: table;
     width: 100%;
     min-height: 40px;
+    z-index: 999;
 
     > * {
       display: table-cell;
